kubernetes/nginx_test/base/httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-test
  labels:
    app: httpd-test
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: 200-399
    # alb.ingress.kubernetes.io/healthy-threshold-count: '3'    # 5
    # alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'  # 2
    # alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    # alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
spec:
  type: ClusterIP
  selector:
    app: httpd-test
  ports:
    - name: http
      port: 80
      # targetPort: 8080
      targetPort: 80
      protocol: TCP
